--- a/index.html
+++ b/index.html
@@ -1,51 +1,50 @@
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="styles.css" />
-    <script
-      defer
-      src="https://use.fontawesome.com/releases/v5.7.1/js/all.js"
-      integrity="sha384-eVEQC9zshBn0rFj4+TU78eNA19HMNigMviK/PU/FFjLXqa/GKPgX58rvt5Z8PLs7"
-      crossorigin="anonymous"
-    ></script>
-    <title>Drawio</title>
-  </head>
-  <body>
-    <aside id="sidebar">
-      <section id="widget_1">
-        <p><i class="fas fa-pencil-alt"></i>Pencil</p>
-        <p><i class="fas fa-circle"></i>Circle</p>
-        <p><i class="fas fa-square"></i>Square</p>
-        <p><i class="fas fa-arrows-alt-h"></i>Line</p>
-        <p><i class="fas fa-font"></i>Text</p>
-        <p><i class="fas fa-hand-paper"></i>Move</p>
-      </section>
-      <section id="widget_2">
-        <p><i class="fas fa-redo"></i></p>
-        <p><i class="fas fa-undo"></i></p>
-        <input type="button" value="Save" />
-        <select>
-          <option value="volvo">Volvo</option>
-          <option value="saab">Saab</option>
-          <option value="mercedes">Mercedes</option>
-          <option value="audi">Audi</option>
-        </select>
-        <input type="button" value="Load" />
-      </section>
-    </aside>
-    <canvas></canvas>
-    <aside id="specs">
-      <section id="widget_3">
-        <ul type="circle">
-          <li><input type="color" /></li>
-          <li><input type="range" /><input type="number" /></li>
-          <li><input type="text" /></li>
-        </ul>
-      </section>
-      <i id="arrow" onclick="changeSpecs()" class="fas fa-chevron-left"></i>
-    </aside>
-  </body>
-  <script src="drawio.js"></script>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="css/main.css" />
+  <script defer src="https://use.fontawesome.com/releases/v5.7.1/js/all.js" integrity="sha384-eVEQC9zshBn0rFj4+TU78eNA19HMNigMviK/PU/FFjLXqa/GKPgX58rvt5Z8PLs7"
+    crossorigin="anonymous"></script>
+  <title>Drawio</title>
+</head>
+
+<body class="body">
+  <aside class="sidebar sidebar--left">
+    <section class="sidebar--tool_list">
+      <p id="pencil" class="sidebar--tool_list--tool btn"><i class="fas fa-pencil-alt sidebar--tool_list--tool--icon"></i>Pencil</p>
+      <p id="circle" class="sidebar--tool_list--tool btn btn__active"><i class="fas fa-circle sidebar--tool_list--tool--icon"></i>Circle</p>
+      <p id="square" class="sidebar--tool_list--tool btn "><i class="fas fa-square sidebar--tool_list--tool--icon"></i>Square</p>
+      <p id="line" class="sidebar--tool_list--tool btn"><i class="fas fa-arrows-alt-h sidebar--tool_list--tool--icon"></i>Line</p>
+      <p id="text" class="sidebar--tool_list--tool btn"><i class="fas fa-font sidebar--tool_list--tool--icon"></i>Text</p>
+      <p id="move" class="sidebar--tool_list--tool btn"><i class="fas fa-hand-paper sidebar--tool_list--tool--icon"></i>Move</p>
+    </section>
+    <section class="sidebar--tool_list">
+      <i class="fas fa-redo sidebar--tool_list--tool"></i>
+      <i class="fas fa-undo sidebar--tool_list--tool"></i>
+      <input type="button" value="Save" class="btn--save" />
+      <select class="sidebar--tool_list--select">
+        <option class="sidebar--tool_list--select--option" value="volvo">Volvo</option>
+        <option class="sidebar--tool_list--select--option" value="saab">Saab</option>
+        <option class="sidebar--tool_list--select--option" value="mercedes">Mercedes</option>
+        <option class="sidebar--tool_list--select--option" value="audi">Audi</option>
+      </select>
+      <input type="button" value="Load" class="btn btn--load" />
+    </section>
+  </aside>
+  <canvas id="canvas" class="canvas"></canvas>
+  <aside id="sidebar__right" class="sidebar sidebar__right sidebar__right__Small">
+    <section class="sidebar--settings">
+      <input type="color" class="sidebar--settings--input" />
+      <input type="range" class="sidebar--settings--input" />
+      <input type="number" class="sidebar--settings--input" />
+      <input type="text" class="sidebar--settings--input" />
+    </section>
+    <i id="sidebar--arrow" onclick="changeSidebarRightSize()" class="fas fa-chevron-left sidebar--arrow"></i>
+  </aside>
+</body>
+<script src="drawio.js"></script>
+<script src="styles.js"></script>
+
 </html>
