--- a/index.html
+++ b/index.html
@@ -1,90 +1,81 @@
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="css/main.css" />
-    <script
-      defer
-      src="https://use.fontawesome.com/releases/v5.7.1/js/all.js"
-      integrity="sha384-eVEQC9zshBn0rFj4+TU78eNA19HMNigMviK/PU/FFjLXqa/GKPgX58rvt5Z8PLs7"
-      crossorigin="anonymous"
-    ></script>
-    <title>Drawio</title>
-  </head>
 
-  <body class="body">
-    <aside class="sidebar sidebar--left">
-      <div class="logo"></div>
-      <section class="sidebar--tool_list">
-        <p id="pencil" data-tool="pencil" class="sidebar--tool_list--tool btn ">
-          <i class="fas fa-pencil-alt sidebar--tool_list--tool--icon"></i>Pencil
-        </p>
-        <p id="circle" data-tool="circle" class="sidebar--tool_list--tool btn">
-          <i class="fas fa-circle sidebar--tool_list--tool--icon"></i>Circle
-        </p>
-        <p
-          id="square"
-          data-tool="rectangle"
-          class="sidebar--tool_list--tool btn  btn__active"
-        >
-          <i class="fas fa-square sidebar--tool_list--tool--icon"></i>Square
-        </p>
-        <p id="line" data-tool="line" class="sidebar--tool_list--tool btn">
-          <i class="fas fa-arrows-alt-h sidebar--tool_list--tool--icon"></i>Line
-        </p>
-        <p id="text" data-tool="text" class="sidebar--tool_list--tool btn">
-          <i class="fas fa-font sidebar--tool_list--tool--icon"></i>Text
-        </p>
-        <p id="move" data-tool="move" class="sidebar--tool_list--tool btn">
-          <i class="fas fa-hand-paper sidebar--tool_list--tool--icon"></i>Move
-        </p>
-      </section>
-      <section class="sidebar--tool_list">
-        <i class="fas fa-redo sidebar--tool_list--tool"></i>
-        <i class="fas fa-undo sidebar--tool_list--tool"></i>
-        <input type="button" value="Save" class="btn btn--save" />
-        <select class="sidebar--tool_list--select">
-          <option class="sidebar--tool_list--select--option" value="volvo"
-            >Volvo</option
-          >
-          <option class="sidebar--tool_list--select--option" value="saab"
-            >Saab</option
-          >
-          <option class="sidebar--tool_list--select--option" value="mercedes"
-            >Mercedes</option
-          >
-          <option class="sidebar--tool_list--select--option" value="audi"
-            >Audi</option
-          >
-        </select>
-        <input type="button" value="Load" class="btn btn--load" />
-      </section>
-    </aside>
-    <canvas id="canvas" class="canvas" width="1520" height="938"></canvas>
-    <aside
-      id="sidebar__right"
-      class="sidebar sidebar__right sidebar__right__Small"
-    >
-      <section class="sidebar--settings">
-        <input type="color" class="sidebar--settings--input" />
-        <input type="range" class="sidebar--settings--input" />
-        <input type="number" class="sidebar--settings--input" />
-        <input type="text" class="sidebar--settings--input" />
-      </section>
-      <i
-        id="sidebar--arrow"
-        onclick="changeSidebarRightSize()"
-        class="fas fa-chevron-left sidebar--arrow"
-      ></i>
-    </aside>
-  </body>
-  <script
-    src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"
-    charset="utf-8"
-  ></script>
-  <script src="js/shapes.js" charset="utf-8"></script>
-  <script src="js/drawio.js" charset="utf-8"></script>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="css/main.css" />
+  <script defer src="https://use.fontawesome.com/releases/v5.7.1/js/all.js"
+    integrity="sha384-eVEQC9zshBn0rFj4+TU78eNA19HMNigMviK/PU/FFjLXqa/GKPgX58rvt5Z8PLs7"
+    crossorigin="anonymous"></script>
+  <title>Drawio</title>
+</head>
 
-  <script src="js/styles.js"></script>
+<body class="body">
+  <aside class="sidebar sidebar--left">
+    <div class="logo"></div>
+    <section class="sidebar--tool_list">
+      <p id="pencil" data-tool="pencil" class="sidebar--tool_list--tool btn ">
+        <i class="fas fa-pencil-alt sidebar--tool_list--tool--icon"></i>Pencil
+      </p>
+      <p id="circle" data-tool="circle" class="sidebar--tool_list--tool btn">
+        <i class="fas fa-circle sidebar--tool_list--tool--icon"></i>Circle
+      </p>
+      <p id="square" data-tool="rectangle" class="sidebar--tool_list--tool btn  btn__active">
+        <i class="fas fa-square sidebar--tool_list--tool--icon"></i>Square
+      </p>
+      <p id="line" data-tool="line" class="sidebar--tool_list--tool btn">
+        <i class="fas fa-arrows-alt-h sidebar--tool_list--tool--icon"></i>Line
+      </p>
+      <p id="text" data-tool="text" class="sidebar--tool_list--tool btn">
+        <i class="fas fa-font sidebar--tool_list--tool--icon"></i>Text
+      </p>
+      <p id="move" data-tool="move" class="sidebar--tool_list--tool btn">
+        <i class="fas fa-hand-paper sidebar--tool_list--tool--icon"></i>Move
+      </p>
+    </section>
+    <section class="sidebar--tool_list">
+      <i class="fas fa-redo sidebar--tool_list--tool"></i>
+      <i class="fas fa-undo sidebar--tool_list--tool"></i>
+      <input type="button" value="Save" class="btn btn--save" />
+      <select class="sidebar--tool_list--select">
+        <option class="sidebar--tool_list--select--option" value="volvo">Volvo</option>
+        <option class="sidebar--tool_list--select--option" value="saab">Saab</option>
+        <option class="sidebar--tool_list--select--option" value="mercedes">Mercedes</option>
+        <option class="sidebar--tool_list--select--option" value="audi">Audi</option>
+      </select>
+      <input type="button" value="Load" class="btn btn--load" />
+    </section>
+  </aside>
+  <canvas id="canvas" class="canvas" width="1520" height="938"></canvas>
+  <aside id="sidebar__right" class="sidebar sidebar__right sidebar__right__Small">
+    <section class="sidebar--settings">
+      <label for="color">Pick color</label><br>
+      <input id="color" type="color" class="sidebar--settings--input sidebar--settings--input-color" />
+      <label for="lineWidth">Pick line width</label><br>
+      <input type="range" id="lineWidth" class="sidebar--settings--input sidebar--settings--input-lineWidth" value="12"
+        min="1" max="100" oninput="lineWidthOut.value = lineWidth.value">
+      <output id="lineWidthOut">100</output>
+      <label for="fontSize">Pick font size</label><br>
+      <input id="fontSize" type="number" value="12"
+        class="sidebar--settings--input sidebar--settings--input-fontSize" />
+      <select id="fontType" class="sidebar--settings--input sidebar--settings--input-fontType">
+        <option value="Arial">Arial</option>
+        <option value="Helvetica">Helvetica</option>
+        <option value="Courier">Courier</option>
+        <option value="Verdana">Verdana</option>
+        <option value="Times New Roman">Times New Roman</option>
+      </select>
+      <input type="text" placeholder="Type, then click on canvas"
+        class="sidebar--settings--input sidebar--settings--input-text" />
+    </section>
+    <i id="sidebar--arrow" onclick="changeSidebarRightSize()" class="fas fa-chevron-left sidebar--arrow"></i>
+  </aside>
+</body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js" charset="utf-8"></script>
+<script src="js/shapes.js" charset="utf-8"></script>
+<script src="js/drawio.js" charset="utf-8"></script>
+
+<script src="js/styles.js"></script>
+
 </html>
