--- a/index.html
+++ b/index.html
@@ -63,16 +63,21 @@
           id="fill"
           class="nav--container--input nav--container--input--fill nav--container--input--fill-filled"
         ></div>
+        <p class="nav--container--input nav--container--input-clear">
+          Clear Canvas
+        </p>
       </div>
       <div class="nav--container nav--container-four">
         <input
           type="number"
+          id="width"
           class="nav--container--input nav--container--input--number"
           value="1000"
         />
         <p>px</p>
         <input
           type="number"
+          id="height"
           class="nav--container--input nav--container--input--number"
           value="600"
         />
@@ -140,7 +145,7 @@
       </section>
     </aside>
     <div class="canvas--container">
-      <canvas id="canvas" class="canvas" width="1000" height="600"></canvas>
+      <canvas id="canvas" class="canvas" width="300" height="300"></canvas>
     </div>
     <!-- <aside id="sidebar__right" class="sidebar sidebar__right sidebar__right__Small">
     <section class="sidebar--settings">
