--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
         <div data-tool="line" class="sidebar--toolList--tool btn btn-tool">
           <i class="fas fa-arrows-alt-h sidebar--toolList--tool-icon"></i>Line
         </div>
-        <div data-tool="move" class="sidebar--toolList--tool btn btn-tool">
+        <!-- <div data-tool="move" class=" inactive sidebar--toolList--tool btn btn-tool">
           <i class="fas fa-hand-paper sidebar--toolList--tool-icon"></i>Move
         </div>
-        <div data-tool="text" class="sidebar--toolList--tool btn btn-tool">
+        <div data-tool="text" class=" inactive sidebar--toolList--tool btn btn-tool">
           <i class="fas fa-font sidebar--toolList--tool-icon"></i>Text
-        </div>
+        </div> -->
         <div
           id="textHider"
           class="hidden sidebar--toolList sidebar--toolList-highlight"
