--- a/index.html
+++ b/index.html
@@ -90,20 +90,6 @@
         </div>
       </div>
     </nav>
-
-    <!-- <label for="fontSize">Pick font size</label>
-    <input id="fontSize" type="number" value="12"
-      class="sidebar--settings--input sidebar--settings--input-fontSize" />
-    <select id="fontType" class="sidebar--settings--input sidebar--settings--input-fontType">
-      <option value="Arial">Arial</option>
-      <option value="Helvetica">Helvetica</option>
-      <option value="Courier">Courier</option>
-      <option value="Verdana">Verdana</option>
-      <option value="Times New Roman">Times New Roman</option>
-    </select>
-    <input type="text" placeholder="Type, then click on canvas"
-      class="sidebar--settings--input sidebar--settings--input-text" /> -->
-
     <aside class="sidebar sidebar--left">
       <section class="sidebar--toolList">
         <div
@@ -124,38 +110,40 @@
         <div data-tool="line" class="sidebar--toolList--tool btn btn-tool">
           <i class="fas fa-arrows-alt-h sidebar--toolList--tool-icon"></i>Line
         </div>
-        <!-- <div data-tool="move" class=" inactive sidebar--toolList--tool btn btn-tool">
+        <!-- <div data-tool="move" class="sidebar--toolList--tool btn btn-tool">
           <i class="fas fa-hand-paper sidebar--toolList--tool-icon"></i>Move
-        </div>
-        <div data-tool="text" class=" inactive sidebar--toolList--tool btn btn-tool">
+        </div>-->
+        <div data-tool="text" class="sidebar--toolList--tool btn btn-tool">
           <i class="fas fa-font sidebar--toolList--tool-icon"></i>Text
-        </div> -->
+        </div>
+
         <div
           id="textHider"
           class="hidden sidebar--toolList sidebar--toolList-highlight"
         >
           <label for="fontSize">Pick font size</label>
-          <input
-            id="fontSize"
-            type="number"
-            value="12"
-            class="sidebar--toolList--tool sidebar--toolList--tool-number"
-          />
+          <div class="inputNumber inputNumber-pixles">
+            <input
+              id="fontSize"
+              type="number"
+              value="28"
+              class="sidebar--toolList--tool sidebar--toolList--tool-number pixles"
+            />
+          </div>
+
           <select
             id="fontType"
-            class="sidebar--toolList--tool sidebar--toolList--tool-select sidebar--toolList--tool-select"
+            class="sidebar--toolList--tool sidebar--toolList--tool-select"
           >
-            <option value="" disabled selected hidden
-              >Choose font family</option
-            >
-            <option value="Arial">Arial</option>
+            <option value="Ariel">Ariel</option>
             <option value="Helvetica">Helvetica</option>
-            <option value="Courier">Courier</option>
+            <option value="Calibri">Calibri</option>
             <option value="Verdana">Verdana</option>
-            <option value="Times New Roman">Times New Roman</option>
+            <option value="Georgia">Georgia</option>
           </select>
           <input
             type="text"
+            id="text"
             placeholder="Type, then click on canvas"
             class="sidebar--toolList--tool sidebar--toolList--tool-text-large"
           />
